--- a/frontend/src/components/sidebar/sidebar.module.css
+++ b/frontend/src/components/sidebar/sidebar.module.css
@@ -22,7 +22,7 @@
   max-height: 50px;
 }
 
-.menuControl:nth-child(5) {
+.menuControl:has(input[value="/profile"]) {
   margin-bottom: auto;
 }
 
